--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <div class="outer-container">
         <div class="title-container"><h1>Quizbowl</h1></div>
-        <div class="score-container"><p>Score: 0</p></div>
+        <div class="score-container"><p>Score:</p></div>
         <div class="question-container"><p>question</p></div>
-        <div class="input-container"><input type="text" id="name" name="name" size="10"/></div>
+        <div class="input-container"><input type="text" id="input-field" name="name" size="10"/></div>
         <div class="button-container"><button>Submit</button></div>
     </div>
 
